[project]
name = "sentry-auth-oidc"
version = "9.1.0"
description = "OpenID Connect authentication provider for Sentry"
authors = [
    {name = "Max Wittig", email = "max.wittig@siemens.com"},
    {name = "Diego Louzán", email = "diego.louzan.ext@siemens.com"},
    {name = "Nejc Habjan", email = "nejc.habjan@siemens.com"},
]
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.7.0",
    "flake8>=3.8.4",
]
test = [
    "codecov>=2.1.12",
    "pytest>=7.1.3",
    "fixtures>=4.1.0",
]

[project.entry-points."sentry.apps"]
oidc = "oidc.apps.Config"

[tool.black]
extend-exclude = "deps"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[tool.uv.sources]

[tool.setuptools]
packages = ["oidc"]
