[project]
name = "sentry-auth-oidc"
version = "9.1.0"
description = "OpenID Connect authentication provider for Sentry"
authors = [
    { name = "Max Wittig", email = "max.wittig@siemens.com" },
    { name = "Diego Louzán", email = "diego.louzan.ext@siemens.com" },
    { name = "Nejc Habjan", email = "nejc.habjan@siemens.com" },
]
requires-python = ">=3.11,<4"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.entry-points."sentry.apps"]
oidc = "oidc.apps.Config"

[dependency-groups]
dev = [
    "ruff>=0.10.0,<1",
]
test = [
    "codecov>=2.1.12,<3",
    "pytest>=9.0.0,<10",
    "fixtures>=4.1.0,<5",
    "lxml>=5.3.0",
    "xmlsec>=1.3.14",
]

[tool.ruff]
line-length = 100
extend-exclude = ["deps"]

[tool.ruff.lint]
extend-ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.uv.build-backend]
module-name = ["oidc"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
